--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             <button class="tecla" onclick="operacion('+')">+</button>
         </div>
         <div class="fila">
-            <button class="tecla" onclick="limpiar('')">AC</button>
+            <button class="tecla" onclick="operador('.')">.</button>
+            <button class="tecla" onclick="limpiar('')">C</button>
             <button class="tecla" onclick="operador('0')">0</button>
-            <button class="tecla" onclick="calculo('')">=</button>
             <button class="tecla" onclick="operacion('/')">/</button>
         </div>
+        <button class="tecla2" onclick="calculo('')">=</button>
+        
     </div>
     <footer>Marcos Castiglioni 2022</footer>
     <script src="js.js"></script>
